[tool.poetry]
name = "wandb-lab"
version = "0.1.0"
description = "A playground for me to try out Weights & Biases."
authors = ["Yuxuan \"Ethan\" Chen <yuxuan.chen@columbia.edu>"]

[tool.poetry.dependencies]
python = "~3.9"
conda-lock = "^1.1.1"
wandb = "^0.12.21"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
tifffile = "^2022.5.4"
tqdm = "^4.64.0"
ipywidgets = "^7.7.1"
albumentations = "^1.2.1"
torch = "^1.12.0"
torchvision = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
